--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.0.0",
   "description": "",
   "main": "main.js",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "aliasify": "^1.4.0",
-    "browserify": "^3.46.0",
+    "browserify": "^4.1.2",
     "coffee-script": "^1.7.1",
     "coffeeify": "^0.6.0",
     "connect": "^2.15.0",
